@@ -207,44 +207,51 @@ class MapViewController: NSViewController {
     // at the 'center' of each polyline. I don't know how or if it is possible
     // to stop mapkit from doing that.  So instead I do things the hard way.
     func addTracks(gpx: Gpx) {
+        guard gpx.tracks.count > 0 else { return}
         // storage for min/max latitude found in the track
         var minlat = CLLocationDegrees(90)
         var minlon = CLLocationDegrees(180)
         var maxlat = CLLocationDegrees(-90)
         var maxlon = CLLocationDegrees(-180)
+        var newOverlay = false
         gpx.tracks.forEach {
             $0.segments.forEach {
                 var trackCoords = $0.points.map {
-                    return CLLocationCoordinate2D(latitude: $0.lat,
-                                                  longitude: $0.lon)
+                    CLLocationCoordinate2D(latitude: $0.lat,
+                                           longitude: $0.lon)
                 }
-                for loc in trackCoords {
-                    if loc.latitude < minlat {
-                        minlat = loc.latitude
+                if !trackCoords.isEmpty {
+                    for loc in trackCoords {
+                        if loc.latitude < minlat {
+                            minlat = loc.latitude
+                        }
+                        if loc.latitude > maxlat {
+                            maxlat = loc.latitude
+                        }
+                        if loc.longitude < minlon {
+                            minlon = loc.longitude
+                        }
+                        if loc.longitude > maxlon {
+                            maxlon = loc.longitude
+                        }
                     }
-                    if loc.latitude > maxlat {
-                        maxlat = loc.latitude
-                    }
-                    if loc.longitude < minlon {
-                        minlon = loc.longitude
-                    }
-                    if loc.longitude > maxlon {
-                        maxlon = loc.longitude
-                    }
+                    let mapLine = MKPolyline(coordinates: &trackCoords,
+                                             count: $0.points.count)
+                    mapLines.append(mapLine)
+                    mapView.addOverlay(mapLine)
+                    newOverlay = true
                 }
-                let mapLine = MKPolyline(coordinates: &trackCoords,
-                                         count: $0.points.count)
-                mapLines.append(mapLine)
-                mapView.addOverlay(mapLine)
             }
         }
-        let span = MKCoordinateSpan(latitudeDelta: maxlat - minlat,
-                                    longitudeDelta:  maxlon - minlon)
-        let center = Coord(latitude: (minlat + maxlat)/2,
-                           longitude: (minlon + maxlon)/2)
-
-        mapView.setRegion(MKCoordinateRegion(center: center, span: span),
-                          animated: false)
+        if newOverlay {
+            let span = MKCoordinateSpan(latitudeDelta: maxlat - minlat,
+                                        longitudeDelta:  maxlon - minlon)
+            let center = Coord(latitude: (minlat + maxlat)/2,
+                               longitude: (minlon + maxlon)/2)
+            
+            mapView.setRegion(MKCoordinateRegion(center: center, span: span),
+                              animated: false)
+        }
     }
 
 }
